# libpostal-api

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh  docker-compose.yml  nginx.conf  package-lock.json
frontend/: .prettierignore  package-lock.json  package.json  vite.config.ts
frontend/app/: app.css  root.tsx
frontend/app/components/: DemoSection.tsx  DocumentationSection.tsx  Footer.tsx  HeroSection.tsx  LibPostalApp.tsx  Navigation.tsx
frontend/app/components/ui/: button.tsx
frontend/app/contexts/: ThemeContext.tsx
frontend/app/routes/: home.tsx
frontend/public/: manifest.json  robots.txt  sitemap.xml
src/: main.rs
src/api/: handlers.rs  routes.rs
src/error/: api_error.rs
src/middleware/: common.rs  mod.rs
src/models/: requests.rs  responses.rs
src/services/: libpostal.rs  mod.rs
static/: index.html
static/js/: app.js
