[package]
name = "libpostal-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Core web framework
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.98"

# LibPostal library
libpostal-rs = { version = "0.1.3", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP middleware and utilities
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace", "limit"] }

# Request tracking and logging
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Rate limiting
governor = "0.10.0"

# OpenAPI documentation
utoipa = { version = "5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
utoipa-axum = "0.2.0"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }
